test_regress/t/t_interface_ar3.out
%Error: t/t_interface_ar3.v:16:36: Unsupported: interface slices
                                 : ... In instance t
   16 |    sub sub01 [2] (.clk, .infc(iinst[0:1]));
      |                                    ^
%Error: Internal Error: t/t_interface_ar3.v:16:36: ../V3Inst.cpp:#: No interface varref under array
                                                 : ... In instance t
   16 |    sub sub01 [2] (.clk, .infc(iinst[0:1]));
      |                                    ^
                        ... See the manual at https://verilator.org/verilator_doc.html for more assistance.
